content/02/02.05/script.ruby.adoc
include::./title.adoc[]

audio::02.05.ruby.audio.mp3[]

shot::[1]
Now that we have the step definitions matching, we can start working on our solution. We like to use our scenarios to _guide_ our development, so we'll start designing the objects we'll need by sketching out some code in our step definitions.

The scenario will be failing while we do this, but we should see the error messages gradually progressing as we drive out the interface to our object model.

Our next goal is for the scenario to fail because we need to implement the actual business logic. _Then_ we can work on changing the business logic inside our objects to make it pass.

.steps.rb
[source,ruby]
----
Given("Lucy is located {int}m from Sean") do |distance|
  puts distance
  pending # Write code here that turns the phrase above into concrete actions
end

When("Sean shouts {string}") do |string|
  pending # Write code here that turns the phrase above into concrete actions
end

Then("Lucy hears Sean's message") do
  pending # Write code here that turns the phrase above into concrete actions
end
----

shot::[2]
To implement the first step, we need to create a couple of `Person` objects, with the specified distance between them. shot::[3] We can remove the `pending` status now, and this `puts` statement,shot::[4] and write the implementation for the first step like this:

// I think "and write the implementation for the first step like this" needs to be removed, since we've been writing this while we talked

[source,ruby]
----
Given("Lucy is located {int}m from Sean") do |distance|
  @lucy = Shouty::Person.new
  @sean = Shouty::Person.new
  @lucy.move_to(distance)
end

When("Sean shouts “free bagels at Sean’s”") do
  pending # Write code here that turns the phrase above into concrete actions
end

Then("Lucy hears Sean’s message") do
  pending # Write code here that turns the phrase above into concrete actions
end
----

We have two instances of person, one representing Lucy, shot::[5]and one representing Sean. shot::[6]Then we call a method to move Lucy to the position specified in the scenario.shot::[7]

video::02.05.animation.mp4[]

To keep things simple, we're going to assume all people are situated on a line: a one-dimensional co-ordinate system. We can always introduce proper geo-locations later. We'll place Sean in the centre, and Lucy 15 metres away from Sean.

This might not be the design we'll end up with once this is all working, but it's a decent place to start.

shot::[8]
If we run Cucumber, we’ll see a compilation error from Ruby. we need to define our `Shouty` module.

[source,bash]
----
$ bundle exec cucumber
Feature: Hear shout

  Scenario: Listener is within range         # features/hear_shout.feature:2
    Given Lucy is located 15m from Sean      # features/step_definitions/steps.rb:1
      uninitialized constant Shouty (NameError)
      ./features/step_definitions/steps.rb:2:in `"Lucy is located {int}m from Sean"'
      features/hear_shout.feature:3:in `Given Lucy is located 15m from Sean'
    When Sean shouts "free bagels at Sean's" # features/step_definitions/steps.rb:7
    Then Lucy hears Sean's message           # features/step_definitions/steps.rb:11

Failing Scenarios:
cucumber features/hear_shout.feature:2 # Scenario: Listener is within range

1 scenario (1 failed)
3 steps (1 failed, 2 skipped)
0m0.004s
----

shot::[9]
Let’s give our solution a home by creating a `lib` directory.
shot::[10]
We’ll put our Shouty application in a Ruby file called `shouty.rb` in that directory.

[source,bash]
----
$ mkdir lib
$ touch lib/shouty.rb
----

shot::[11]
Create a `Shouty` module, then an empty `Person` class inside it. shot::[12]

.lib/shouty.rb
[source,ruby]
----
module Shouty
  class Person

  end
end
----

shot::[13]
For now, we’ll just require the shouty application from our `steps.rb` file. In a later lesson we’ll talk more about how to organise this code a bit better.

[source,ruby]
----
require 'shouty'

Given("Lucy is located {int}m from Sean") do |distance|
 # ...
end
----

shot::[14]
When we run the scenario this time, Cucumber tells us that we're missing the `move_to` method on the `Person` class. shot::[15]

[source]
----
$ bundle exec cucumber
Feature: Hear shout

  Scenario: Listener is within range         # features/hear_shout.feature:2
    Given Lucy is located 15m from Sean      # features/step_definitions/steps.rb:3
      undefined method `move_to' for #<Shouty::Person:0x00007fed0da12b68> (NoMethodError)
      ./features/step_definitions/steps.rb:6:in `"Lucy is located {int}m from Sean"'
      features/hear_shout.feature:3:in `Given Lucy is located 15m from Sean'
    When Sean shouts "free bagels at Sean's" # features/step_definitions/steps.rb:9
    Then Lucy hears Sean's message           # features/step_definitions/steps.rb:13

Failing Scenarios:
cucumber features/hear_shout.feature:2 # Scenario: Listener is within range

1 scenario (1 failed)
3 steps (1 failed, 2 skipped)
0m0.004s
----

shot::[16]
We'll add the method definition without implementing it yet.

[source,ruby]
----
module Shouty
  class Person
    def move_to(distance)
      
    end
  end
end
----

shot::[17]
When we run the scenario again, the first step is green!

[source,bash]
----
bundle exec cucumber
Feature: Hear shout

  Scenario: Listener is within range         # features/hear_shout.feature:2
    Given Lucy is located 15m from Sean      # features/step_definitions/steps.rb:3
    When Sean shouts "free bagels at Sean's" # features/step_definitions/steps.rb:9
      TODO (Cucumber::Pending)
      ./features/step_definitions/steps.rb:10:in `"Sean shouts {string}"'
      features/hear_shout.feature:4:in `When Sean shouts "free bagels at Sean's"'
    Then Lucy hears Sean's message           # features/step_definitions/steps.rb:13

1 scenario (1 pending)
3 steps (1 skipped, 1 pending, 1 passed)
0m0.006s
----

We're making progress!

We'll keep working like this until we see the scenario failing for the right reasons.

In the second step definition, we want to tell Sean to shout something.

shot::[18]
In order to send instructions to Sean from the second step, we've stored him in an _instance variable_, so that he’ll be accessible from all of our step definitions.

shot::[19]
In the `When` step, we're capturing Sean's message using the `{string}` pattern, so let's give that argument a more meaningful name.shot::[20]

shot::[21]
And now we can now tell him to _shout_ the message:

[source,ruby]
----
When("Sean shouts {string}") do |message|
  @sean.shout(message)
end
----

shot::[22]
If we run Cucumber, it's telling is that our `Person` class needs a `shout` method. 

[source,bash]
----
bundle exec cucumber
Feature: Hear shout

  Scenario: Listener is within range         # features/hear_shout.feature:2
    Given Lucy is located 15m from Sean      # features/step_definitions/steps.rb:4
    When Sean shouts "free bagels at Sean's" # features/step_definitions/steps.rb:10
      undefined method `shout' for #<Shouty::Person:0x0000558e1ee78428> (NoMethodError)
      ./features/step_definitions/steps.rb:11:in `"Sean shouts {string}"'
      features/hear_shout.feature:4:in `When Sean shouts "free bagels at Sean's"'
    Then Lucy hears Sean’s message           # features/step_definitions/steps.rb:14

Failing Scenarios:
cucumber features/hear_shout.feature:2 # Scenario: Listener is within range

1 scenario (1 failed)
3 steps (1 failed, 1 skipped, 1 passed)
0m0.003s
----

shot::[23]
Let’s not worry about the implementation yet. The most important thing right now is to discover the shape of our domain model.

.shouty.rb
[source,ruby]
----
module Shouty
  class Person
    def move_to(distance)
      
    end

    def shout(message)
      
    end
  end
end
----

shot::[24]
The last step definition is where we implement a check, or assertion. We'll verify that what Lucy has heard is exactly the same as what Sean shouted.

shot::[25]
Once again we're going to write the code we wish we had.

[source,ruby]
----
Then("Lucy hears Sean's message") do
  expect(@lucy.messages_heard).to include @message_from_sean
end
----

So we need a way to ask Lucy what messages she's heard, and we also need to know what it was that Sean shouted.

We can record what Sean shouts by storing it in an instance variable as the `When` step runs.shot::[26] This is a common pattern to use in Cucumber step definitions when you don’t want to repeat the same test data in different parts of a scenario. Now we can use that in the assertion check.shot::[27]

[source,ruby]
----
When("Sean shouts {string}") do |message|
  @sean.shout(message)
  @message_from_sean = message
end
----

We also need to add a `messages_heard` method to our Person class.shot::[28] Let's do that now, we'll just return an empty array for now.shot::[29]

[source,ruby]
----
module Shouty
  class Person
    def move_to(distance)
      
    end

    def shout(message)
      
    end

    def messages_heard
      []  
    end
  end
end
----

...and watch Cucumber run the tests again.shot::[30]

[source,bash]
----
$ bundle exec cucumber
Feature: Hear shout

  Scenario: Listener is within range         # features/hear_shout.feature:2
    Given Lucy is located 15m from Sean      # features/step_definitions/steps.rb:4
    When Sean shouts "free bagels at Sean's" # features/step_definitions/steps.rb:10
    Then Lucy hears Sean’s message           # features/step_definitions/steps.rb:15
      expected [] to include "free bagels at Sean's" (RSpec::Expectations::ExpectationNotMetError)
      ./features/step_definitions/steps.rb:16:in `"Lucy hears Sean’s message"'
      features/hear_shout.feature:5:in `Then Lucy hears Sean’s message'

Failing Scenarios:
cucumber features/hear_shout.feature:2 # Scenario: Listener is within range

1 scenario (1 failed)
3 steps (1 failed, 2 passed)
0m0.032s
----

This is great! Whenever we do BDD, getting to our first failing test is a milestone. Seeing the test fail proves that it is capable of detecting errors in our code!

Never trust an automated test that you haven’t seen fail!

Now all we have to do is write the code to make it do what it's supposed to.
